objects/BigMachines__Quote_Product__c.object
<CustomObject>
    <description>An individual line item on an Oracle CPQ Cloud quote</description>
    <fields>
        <fullName>BigMachines__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BigMachines__External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BigMachines__Prep_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prep Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BigMachines__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Oracle CPQ Cloud Quote Products</relationshipLabel>
        <relationshipName>BigMachines_Quote_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BigMachines__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>17</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BigMachines__Quote__c</fullName>
        <label>Quote</label>
        <referenceTo>BigMachines__Quote__c</referenceTo>
        <relationshipLabel>Quote Products</relationshipLabel>
        <relationshipName>BigMachines_Quote_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BigMachines__Sales_Price__c</fullName>
        <label>Sales Price</label>
        <precision>17</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BigMachines__Synchronization_Id__c</fullName>
        <label>Synchronization Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BigMachines__Total_Price__c</fullName>
        <formula>BigMachines__Sales_Price__c * BigMachines__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BusinessType__c</fullName>
        <description>Define the type of SKU (Service, Labor, etc)</description>
        <label>Business Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ADP</fullName>
                    <label>Adapted Product</label>
                </value>
                <value>
                    <fullName>CMP</fullName>
                    <label>Component</label>
                </value>
                <value>
                    <fullName>EQP</fullName>
                    <label>Equipment</label>
                </value>
                <value>
                    <fullName>MPN</fullName>
                    <label>Manufacturer Part Number</label>
                </value>
                <value>
                    <fullName>MNT</fullName>
                    <label>Maintenance Material</label>
                </value>
                <value>
                    <fullName>NVA</fullName>
                    <label>Non Valuated Material</label>
                </value>
                <value>
                    <fullName>NST</fullName>
                    <label>Non Stocked Material</label>
                </value>
                <value>
                    <fullName>OSY</fullName>
                    <label>Operating Supplies</label>
                </value>
                <value>
                    <fullName>PCK</fullName>
                    <label>Packaging Material</label>
                </value>
                <value>
                    <fullName>RSP</fullName>
                    <label>Referenced Product</label>
                </value>
                <value>
                    <fullName>SAS</fullName>
                    <label>Sub Assembly</label>
                </value>
                <value>
                    <fullName>SER</fullName>
                    <label>Services</label>
                </value>
                <value>
                    <fullName>AOC</fullName>
                </value>
                <value>
                    <fullName>SC</fullName>
                    <label>Scrap</label>
                </value>
                <value>
                    <fullName>IP</fullName>
                </value>
                <value>
                    <fullName>ServiceContract</fullName>
                    <label>Service Contract</label>
                </value>
                <value>
                    <fullName>Labor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExtNetPrice__c</fullName>
        <description>To avoid confusion for users and to have same name as in CPQ tool this field is created</description>
        <formula>BigMachines__Total_Price__c</formula>
        <label>Ext. Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExtPrice__c</fullName>
        <label>Ext. Price</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_List__c</fullName>
        <description>CPQ : Aishwarya</description>
        <label>Price List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitNetPrice__c</fullName>
        <description>To avoid confusion for users and to have same name as in CPQ tool this field is created</description>
        <formula>BigMachines__Sales_Price__c</formula>
        <label>Unit Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <label>Unit Price</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Quote Product</label>
    <nameField>
        <label>Part Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Oracle CPQ Cloud Quote Products</pluralLabel>
    <recordTypes>
        <fullName>BigMachines__Standard</fullName>
        <active>true</active>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>